# go-capnproto2

./: .travis.yml  BUILD.bazel  CHANGELOG.md  README.md  doc.go  example_test.go  go.capnp.go  go.mod  go.sum  integration_test.go  integrationutil_test.go  list.go  mem.go
capnpc-go/: BUILD.bazel  capnpc-go.go  capnpc-go_test.go  fileparts.go  nodes.go  templates.go
capnpc-go/templates/: structDataField  structStructField
capnpc-go/testdata/: const.capnp  group.capnp  otherscopes.capnp  scopes.capnp  util.capnp
encoding/text/: BUILD.bazel  marshal.go  marshal_test.go
internal/aircraftlib/: BUILD.bazel  aircraft.capnp  aircraft.capnp.go
internal/capnptool/: BUILD.bazel
internal/cmd/mktemplates/: mktemplates.go
internal/demo/: BUILD.bazel  book_test.go  hash_test.go
internal/demo/books/: BUILD.bazel  books.capnp  (+1 more)
internal/fulfiller/: BUILD.bazel  fulfiller.go  fulfiller_test.go
internal/fuzztest/: fuzztest.go
internal/nodemap/: BUILD.bazel  nodemap.go
internal/packed/: BUILD.bazel  fuzz.go
internal/queue/: BUILD.bazel
internal/schema/: BUILD.bazel  schema.capnp.go
internal/strquote/: BUILD.bazel
pogs/: BUILD.bazel  bench_test.go  doc.go  embed_test.go  example_test.go  extract.go  fields.go  insert.go  interface_test.go  pogs_test.go
rpc/: BUILD.bazel  answer.go  bench_test.go  cancel_test.go  embargo_test.go  errors.go  example_test.go  introspect.go  issue3_test.go  promise_test.go  question.go  release_test.go  rpc.go  rpc_test.go  tables.go  transport.go
rpc/internal/refcount/: BUILD.bazel  refcount.go  refcount_test.go
schemas/: BUILD.bazel  schemas.go  schemas_test.go
server/: BUILD.bazel  server.go  server_test.go
std/: go.capnp
std/capnp/: README.md  c++.capnp  gen.sh  json.capnp  persistent.capnp  rpc-twoparty.capnp  rpc.capnp  schema.capnp
std/capnp/json/: BUILD.bazel  json.capnp.go
std/capnp/rpctwoparty/: BUILD.bazel  rpc-twoparty.capnp.go
(+19 files in other folders)
