load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["rpc-twoparty.capnp.go"],
    importpath = "github.com/MadBase/go-capnproto2/v2/std/capnp/rpctwoparty",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//encoding/text:go_default_library",
        "//schemas:go_default_library",
    ],
)
